[gd_scene load_steps=45 format=4 uid="uid://b0c1cjw0ww7k4"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_25y5n"]
[ext_resource type="Texture2D" uid="uid://d31enr2l8beft" path="res://Textures/TempTextures/Wood Planks/Planks_Albedo.png" id="1_ji2vu"]
[ext_resource type="Texture2D" uid="uid://gwmh5hctqh1g" path="res://Textures/TempTextures/Wood Planks/Planks_AO.png" id="2_blpp0"]
[ext_resource type="Texture2D" uid="uid://b4yqbyfs1e6gn" path="res://Textures/TempTextures/Wood Planks/Planks_Height.png" id="3_3vp0y"]
[ext_resource type="Texture2D" uid="uid://dt1lnxl5h5b3h" path="res://Textures/TempTextures/Wood Planks/Planks_Normal.png" id="4_suw1b"]
[ext_resource type="Texture2D" uid="uid://bi661l2uyhc23" path="res://Textures/TempTextures/Wood Planks/Planks_Rough.png" id="5_sry3t"]
[ext_resource type="Shader" path="res://scripts/Shaders/PixelDither.gdshader" id="6_mrb2e"]
[ext_resource type="Texture2D" uid="uid://pnl4o5e0dhlj" path="res://Textures/Logo/youreOutLogo.png" id="7_i031p"]
[ext_resource type="FontFile" uid="uid://b85pwm2y0ga2i" path="res://Fonts/ARJULIAN.ttf" id="8_rprnk"]
[ext_resource type="FontFile" uid="uid://bvbm4u6y1bvfr" path="res://Fonts/AdobeGurmukhi-Bold.otf" id="9_6v78o"]
[ext_resource type="AudioStream" uid="uid://vmrlyhdxfyg2" path="res://assets/audio/UI/SFX - UI Hover.wav" id="11_dnt25"]
[ext_resource type="AudioStream" uid="uid://dqvxrnfjbxjs1" path="res://assets/audio/UI/SFX - UI Select (click).wav" id="12_8y5xm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hcodw"]
albedo_color = Color(0.472846, 0.385525, 0.171227, 1)
albedo_texture = ExtResource("1_ji2vu")
metallic_specular = 0.43
roughness_texture = ExtResource("5_sry3t")
normal_enabled = true
normal_scale = 12.51
normal_texture = ExtResource("4_suw1b")
ao_enabled = true
ao_texture = ExtResource("2_blpp0")
heightmap_enabled = true
heightmap_texture = ExtResource("3_3vp0y")
uv1_scale = Vector3(0.305, 0.305, 0.305)
uv1_triplanar = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r16pc"]
render_priority = 0
shader = ExtResource("6_mrb2e")
shader_parameter/enable_fog = true
shader_parameter/fog_color = null
shader_parameter/noise_color = null
shader_parameter/fog_distance = 100.0
shader_parameter/fog_fade_range = 50.0
shader_parameter/enable_noise = true
shader_parameter/noise_time_fac = 4.0
shader_parameter/enable_color_limitation = true
shader_parameter/color_levels = 32
shader_parameter/enable_dithering = true
shader_parameter/dither_strength = 0.3
shader_parameter/pixel_size = 4

[sub_resource type="QuadMesh" id="QuadMesh_foohx"]
material = SubResource("ShaderMaterial_r16pc")
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_g34lr"]
resource_name = "Camera"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.41655, 2.56875, 4.76837e-07), Vector3(-1.41655, 2.54251, 4.76837e-07), Vector3(-1.41655, 2.56875, 4.76837e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.887343, -1.5708, 5.36739e-08), Vector3(-0.926124, -1.5708, 5.64941e-08), Vector3(-0.887343, -1.5708, 5.36739e-08)]
}

[sub_resource type="Animation" id="Animation_4vcvb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.41655, 2.56875, 4.76837e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.887343, -1.5708, 5.36739e-08)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o77eu"]
_data = {
"Camera": SubResource("Animation_g34lr"),
"RESET": SubResource("Animation_4vcvb")
}

[sub_resource type="Animation" id="Animation_f1ai6"]
resource_name = "Flip"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.10012, 0), Vector3(3.1032, 3.0997, 0)]
}

[sub_resource type="Animation" id="Animation_shc1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.10012, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_erqkm"]
_data = {
"Flip": SubResource("Animation_f1ai6"),
"RESET": SubResource("Animation_shc1x")
}

[sub_resource type="Shader" id="Shader_sfvb0"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.3.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_burley, specular_schlick_ggx;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform float point_size : hint_range(0.1, 128.0, 0.1);

uniform float roughness : hint_range(0.0, 1.0);
uniform sampler2D texture_metallic : hint_default_white, filter_linear_mipmap, repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r, filter_linear_mipmap, repeat_enable;

uniform float specular : hint_range(0.0, 1.0, 0.01);
uniform float metallic : hint_range(0.0, 1.0, 0.01);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;

	float metallic_tex = dot(texture(texture_metallic, base_uv), metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	SPECULAR = specular;

	vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
	float roughness_tex = dot(texture(texture_roughness, base_uv), roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
}
"

[sub_resource type="Gradient" id="Gradient_ydiq2"]
colors = PackedColorArray(0.99386, 1, 0.863988, 1, 1, 1, 0.360784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k80jl"]
gradient = SubResource("Gradient_ydiq2")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.483146, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_un6l3"]
render_priority = 0
shader = SubResource("Shader_sfvb0")
shader_parameter/albedo = Color(1, 1, 0.360784, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = SubResource("GradientTexture2D_k80jl")

[sub_resource type="ArrayMesh" id="ArrayMesh_riraw"]
_surfaces = [{
"aabb": AABB(-1, -1, -2.00115, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAAGAAQAAAACAAYAAwAGAAIAAwAHAAYABwAEAAYABwAFAAQABQADAAEABQAHAAMAAQACAAAAAQADAAIABQAAAAQABQABAAAA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("/////wAAAAD//wAAAAAAAP///////wAA//8AAP//AAAAAP//AAAAAAAAAAAAAAAAAAD/////AAAAAAAA//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_oyx4y"]
resource_name = "Folder__Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -2.00115, 2, 2, 2),
"attribute_data": PackedByteArray("/5//f/+f/3//n/9//1//f/9f/3//X/9//5//P/+f/z//n/8//1//P/9f/z//X/8//5//v//f/3//n/+//1//v/8f/3//X/+//58AAP/f/z//n////18AAP8f/z//X///"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AQATAA0AAQAHABMACQASAAYACQAVABIAFwAOABQAFwARAA4AEAAKAAQAEAAWAAoABQAIAAIABQALAAgADwAAAAwADwADAAAA"),
"material": SubResource("ShaderMaterial_un6l3"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("/////wAA////////AAD///////8AAFTV//8AAAAA/////wAAAAD/v///AAAAAFTV/////////7///////////////////1TV//8AAP///7///wAA////v///AAD//1TVAAD//wAA//8AAP//AAD//wAA//8AAFTVAAAAAAAA//8AAAAAAAD/vwAAAAAAAFTVAAD//////78AAP///////wAA/////1TVAAAAAP///78AAAAA////vwAAAAD//1TV/7//v/9//7+qKqoq/7//vwAA/3+qKqoq//////9//7+qKqoq/////wAA/3+qKqoq/7//v/9//79U1VTV/7//vwAA/39U1VTV//////9//79U1VTV/////wAA/39U1VTV")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_riraw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fxj6x"]
albedo_color = Color(0.745265, 0.764471, 0.203952, 1)
albedo_texture = ExtResource("7_i031p")
albedo_texture_force_srgb = true

[sub_resource type="PlaneMesh" id="PlaneMesh_w5kuv"]
material = SubResource("StandardMaterial3D_fxj6x")

[sub_resource type="BoxShape3D" id="BoxShape3D_44af1"]
size = Vector3(0.125061, 0.0439453, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7v5jy"]
size = Vector3(0.222778, 0.0463257, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_b7gc5"]
size = Vector3(0.115601, 0.0478516, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d8ug4"]
albedo_color = Color(0.295867, 0.295866, 0.295866, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_2actl"]
_surfaces = [{
"aabb": AABB(-1, -1, -2.00115, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAAGAAQAAAACAAYAAwAGAAIAAwAHAAYABwAEAAYABwAFAAQABQADAAEABQAHAAMAAQACAAAAAQADAAIABQAAAAQABQABAAAA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("/////wAAAAD//wAAAAAAAP///////wAA//8AAP//AAAAAP//AAAAAAAAAAAAAAAAAAD/////AAAAAAAA//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_i07gh"]
resource_name = "Folder__Cube_001"
_surfaces = [{
"aabb": AABB(-1, -1, -2.00115, 2, 2, 2),
"attribute_data": PackedByteArray("/5//f/+f/3//n/9//1//f/9f/3//X/9//5//P/+f/z//n/8//1//P/9f/z//X/8//5//v//f/3//n/+//1//v/8f/3//X/+//58AAP/f/z//n////18AAP8f/z//X///"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AQATAA0AAQAHABMACQASAAYACQAVABIAFwAOABQAFwARAA4AEAAKAAQAEAAWAAoABQAIAAIABQALAAgADwAAAAwADwADAAAA"),
"material": SubResource("StandardMaterial3D_d8ug4"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("/////wAA////////AAD///////8AAFTV//8AAAAA/////wAAAAD/v///AAAAAFTV/////////7///////////////////1TV//8AAP///7///wAA////v///AAD//1TVAAD//wAA//8AAP//AAD//wAA//8AAFTVAAAAAAAA//8AAAAAAAD/vwAAAAAAAFTVAAD//////78AAP///////wAA/////1TVAAAAAP///78AAAAA////vwAAAAD//1TV/7//v/9//7+qKqoq/7//vwAA/3+qKqoq//////9//7+qKqoq/////wAA/3+qKqoq/7//v/9//79U1VTV/7//vwAA/39U1VTV//////9//79U1VTV/////wAA/39U1VTV")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_2actl")

[sub_resource type="BoxShape3D" id="BoxShape3D_o361r"]
size = Vector3(0.283325, 0.0605469, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_kojem"]
size = Vector3(0.272339, 0.0567017, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lglhc"]
size = Vector3(0.498657, 0.0578613, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_vlh5f"]
size = Vector3(0.262207, 0.0512085, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_hmnqp"]
size = Vector3(0.170532, 0.0517578, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5hjjc"]
albedo_color = Color(1, 1, 0.360784, 1)
albedo_texture = SubResource("GradientTexture2D_k80jl")

[sub_resource type="ArrayMesh" id="ArrayMesh_obcs1"]
resource_name = "Folder__Cube_001"
_surfaces = [{
"aabb": AABB(-1, -1, -2.00115, 2, 2, 2),
"attribute_data": PackedByteArray("/5//f/+f/3//n/9//1//f/9f/3//X/9//5//P/+f/z//n/8//1//P/9f/z//X/8//5//v//f/3//n/+//1//v/8f/3//X/+//58AAP/f/z//n////18AAP8f/z//X///"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AQATAA0AAQAHABMACQASAAYACQAVABIAFwAOABQAFwARAA4AEAAKAAQAEAAWAAoABQAIAAIABQALAAgADwAAAAwADwADAAAA"),
"material": SubResource("StandardMaterial3D_5hjjc"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("/////wAA////////AAD///////8AAFTV//8AAAAA/////wAAAAD/v///AAAAAFTV/////////7///////////////////1TV//8AAP///7///wAA////v///AAD//1TVAAD//wAA//8AAP//AAD//wAA//8AAFTVAAAAAAAA//8AAAAAAAD/vwAAAAAAAFTVAAD//////78AAP///////wAA/////1TVAAAAAP///78AAAAA////vwAAAAD//1TV/7//v/9//7+qKqoq/7//vwAA/3+qKqoq//////9//7+qKqoq/////wAA/3+qKqoq/7//v/9//79U1VTV/7//vwAA/39U1VTV//////9//79U1VTV/////wAA/39U1VTV")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_2actl")

[sub_resource type="Animation" id="Animation_th0el"]
resource_name = "data_reset"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a788s"]
_data = {
"data_reset": SubResource("Animation_th0el")
}

[node name="Title" type="Node3D"]
script = ExtResource("1_25y5n")

[node name="Lighting" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.78201, 0)
light_energy = 3.139
spot_range = 7.497
spot_attenuation = -1.17
spot_angle = 31.037

[node name="Build" type="Node3D" parent="."]

[node name="ProtoCSGBox3D" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74501, 0)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(3, 0.133789, 4.59546)

[node name="ProtoCSGBox3D2" type="CSGBox3D" parent="Build"]
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(22.1741, 0.133789, 12.3831)

[node name="ProtoCSGBox3D7" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(22.1741, 0.133789, 12.3831)

[node name="ProtoCSGBox3D5" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.93311, 6.02332)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(22.1741, 6, 0.336426)

[node name="ProtoCSGBox3D6" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.93311, -5.97668)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(22.1741, 6, 0.336426)

[node name="ProtoCSGBox3D3" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9847, 2.93311, 0)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(0.204712, 6, 12.3831)

[node name="ProtoCSGBox3D4" type="CSGBox3D" parent="Build"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0153, 2.93311, 0)
material_override = SubResource("StandardMaterial3D_hcodw")
size = Vector3(0.204712, 6, 12.3831)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.57837e-06, 0.775397, -0.631475, 3.38936e-08, 0.631475, 0.775397, 1, 2.75326e-06, -2.28593e-06, -1.41655, 2.56875, 4.76837e-07)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30557e-10, 0.0561032, 0.00527382)
mesh = SubResource("QuadMesh_foohx")

[node name="CamAnim" type="AnimationPlayer" parent="Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_o77eu")
}
speed_scale = 0.3

[node name="FolderMenu" type="Node3D" parent="."]
transform = Transform3D(0.99914, 0, 0.0414571, 0, 1, 0, -0.0414571, 0, 0.99914, -0.0304, 0, -0.316145)

[node name="PageAnim" type="AnimationPlayer" parent="FolderMenu"]
libraries = {
"": SubResource("AnimationLibrary_erqkm")
}

[node name="Front" type="MeshInstance3D" parent="FolderMenu"]
transform = Transform3D(-0.414619, 0, 0.0152818, 0, 0.000773191, 0, -0.0172052, 0, -0.368269, -0.85245, 1.83485, -0.0593743)
cast_shadow = 0
mesh = SubResource("ArrayMesh_oyx4y")
skeleton = NodePath("")

[node name="LogoSpot" type="MeshInstance3D" parent="FolderMenu/Front"]
transform = Transform3D(0.00196172, 0, 0.458604, 0, 245.968, 0, -0.55881, 0, -0.00856351, -0.530094, 11.6177, -0.591414)
mesh = SubResource("PlaneMesh_w5kuv")
skeleton = NodePath("../..")

[node name="Playlbl" type="Label3D" parent="FolderMenu/Front"]
transform = Transform3D(0.0227171, -5.64424, -2.47908e-07, 9.68691e-07, -9.72961e-07, 22.2644, -6.47117, 0.105395, 3.25918e-07, -0.0473082, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "PLAY"
font = ExtResource("9_6v78o")
outline_size = 0
horizontal_alignment = 0

[node name="PlayArea" type="Area3D" parent="FolderMenu/Front/Playlbl"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Front/Playlbl/PlayArea"]
transform = Transform3D(1, 1.63913e-07, 6.39488e-14, 7.45058e-09, 1, 1.34648e-12, 1.18305e-12, -2.44604e-12, 1, 0.058136, -8.9407e-08, 0)
shape = SubResource("BoxShape3D_44af1")

[node name="Title2" type="Label3D" parent="FolderMenu/Front"]
transform = Transform3D(0.0214479, -5.3289, -2.34057e-07, 9.1457e-07, -9.18602e-07, 21.0204, -6.10963, 0.0995067, 3.07709e-07, -0.552229, 13.5715, -1.15973)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "The landlords
guide to eviction"
font = ExtResource("8_rprnk")
font_size = 10
outline_size = 0
horizontal_alignment = 0

[node name="Settingslbl" type="Label3D" parent="FolderMenu/Front"]
transform = Transform3D(0.022717, -5.64424, -2.47907e-07, 9.68691e-07, -9.72961e-07, 22.2643, -6.47117, 0.105395, 3.25919e-07, 0.316361, 13.5715, -0.0661652)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "SETTINGS"
font = ExtResource("9_6v78o")
outline_size = 0
horizontal_alignment = 0

[node name="SettingsArea" type="Area3D" parent="FolderMenu/Front/Settingslbl"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Front/Settingslbl/SettingsArea"]
transform = Transform3D(1, 0, -1.34293e-12, 0, 1, 4.61853e-14, 1.42109e-14, -1.5099e-12, 1, 0.107483, 0.00112912, 0)
shape = SubResource("BoxShape3D_7v5jy")

[node name="Quitlbl" type="Label3D" parent="FolderMenu/Front"]
transform = Transform3D(0.022717, -5.64424, -2.47907e-07, 9.68691e-07, -9.72961e-07, 22.2643, -6.47117, 0.105395, 3.25919e-07, 0.647567, 13.5715, -0.0724405)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "QUIT"
font = ExtResource("9_6v78o")
outline_size = 0
horizontal_alignment = 0

[node name="QuitArea" type="Area3D" parent="FolderMenu/Front/Quitlbl"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Front/Quitlbl/QuitArea"]
transform = Transform3D(1, 0, -1.25766e-12, 0, 1, 4.28546e-14, 1.42109e-14, -1.40687e-12, 1, 0.0543824, -5.96046e-08, 0)
shape = SubResource("BoxShape3D_b7gc5")

[node name="Paper" type="MeshInstance3D" parent="FolderMenu"]
transform = Transform3D(-0.401225, 0, 0.0148773, 0, 0.000773191, 0, -0.0166479, 0, -0.358553, -0.85245, 1.82148, -0.0593742)
mesh = SubResource("ArrayMesh_i07gh")
skeleton = NodePath("")

[node name="Settingslbl" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0209787, -5.21233, -2.28937e-07, 8.94565e-07, -8.98508e-07, 20.5606, -5.97599, 0.0973302, 3.00979e-07, -0.762746, 13.5715, -0.4868)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Settings
"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="Audio" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0130864, -3.25143, -1.4281e-07, 5.58027e-07, -5.60486e-07, 12.8257, -3.7278, 0.0607142, 1.87749e-07, -0.262312, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Audio: 100%"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="AudioArea" type="Area3D" parent="FolderMenu/Paper/Audio"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Paper/Audio/AudioArea"]
transform = Transform3D(1, -9.31288e-09, -7.21174e-13, 9.31288e-09, 1, 6.89265e-13, 7.21174e-13, -6.89265e-13, 1, 0.134827, 0, 0)
shape = SubResource("BoxShape3D_o361r")

[node name="Music" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0130864, -3.25143, -1.4281e-07, 5.58027e-07, -5.60486e-07, 12.8257, -3.7278, 0.0607142, 1.87749e-07, 0.0134871, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Music: 100%"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="MusicArea" type="Area3D" parent="FolderMenu/Paper/Music"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Paper/Music/MusicArea"]
transform = Transform3D(1, 0, 0, 0, 1, -1.16573e-15, 0, 1.16573e-15, 1, 0.131287, 0.0027771, 0)
shape = SubResource("BoxShape3D_kojem")

[node name="Screen" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0130864, -3.25143, -1.4281e-07, 5.58027e-07, -5.60486e-07, 12.8257, -3.7278, 0.0607142, 1.87749e-07, 0.248379, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Resolution: Windowed"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="ScreenArea" type="Area3D" parent="FolderMenu/Paper/Screen"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Paper/Screen/ScreenArea"]
transform = Transform3D(1, 0, 0, 0, 1, -1.16574e-15, 0, 1.16574e-15, 1, 0.244934, -0.00109851, 0)
shape = SubResource("BoxShape3D_lglhc")

[node name="Data" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0130864, -3.25143, -1.4281e-07, 5.58027e-07, -5.60486e-07, 12.8257, -3.7278, 0.0607143, 1.87749e-07, 0.486187, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Reset Data"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="DataArea" type="Area3D" parent="FolderMenu/Paper/Data"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Paper/Data/DataArea"]
transform = Transform3D(1, 0, 0, 0, 1, 1.84575e-15, 0, 1.6247e-12, 1, 0.125733, 0.00088495, 0)
shape = SubResource("BoxShape3D_vlh5f")

[node name="Main" type="Label3D" parent="FolderMenu/Paper"]
transform = Transform3D(0.0130864, -3.25143, -1.4281e-07, 5.58027e-07, -5.60486e-07, 12.8257, -3.7278, 0.0607143, 1.8775e-07, 0.84366, 13.5715, -0.0784259)
pixel_size = 0.0015
render_priority = 1
modulate = Color(0, 0, 0, 1)
text = "Return"
font = ExtResource("8_rprnk")
outline_size = 0
horizontal_alignment = 0

[node name="Area3D" type="Area3D" parent="FolderMenu/Paper/Main"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FolderMenu/Paper/Main/Area3D"]
transform = Transform3D(1, -2.16939e-29, -1.77636e-14, 0, 1, -1.22126e-15, 1.77636e-14, 1.22126e-15, 1, 0.0767213, 5.96046e-08, 0)
shape = SubResource("BoxShape3D_hmnqp")

[node name="Back" type="MeshInstance3D" parent="FolderMenu"]
transform = Transform3D(-0.414619, 0, 0.016322, 0, 0.000773191, 0, -0.0172037, 0, -0.393371, -0.851309, 1.81947, -0.0868698)
mesh = SubResource("ArrayMesh_obcs1")
skeleton = NodePath("")

[node name="FolderSound" type="AudioStreamPlayer3D" parent="FolderMenu"]
volume_db = 4.571

[node name="UIHoverSound" type="AudioStreamPlayer3D" parent="FolderMenu"]
stream = ExtResource("11_dnt25")
max_polyphony = 5

[node name="UIClickSound" type="AudioStreamPlayer3D" parent="FolderMenu"]
stream = ExtResource("12_8y5xm")
max_polyphony = 2

[node name="2DUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DataRes" type="Label" parent="2DUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.5
offset_top = -74.0
offset_right = 153.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Data has been reset."
horizontal_alignment = 1
vertical_alignment = 1

[node name="UIAnim" type="AnimationPlayer" parent="2DUI"]
libraries = {
"": SubResource("AnimationLibrary_a788s")
}

[connection signal="input_event" from="FolderMenu/Front/Playlbl/PlayArea" to="." method="_on_play_area_input_event"]
[connection signal="mouse_entered" from="FolderMenu/Front/Playlbl/PlayArea" to="." method="_on_play_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Front/Playlbl/PlayArea" to="." method="_on_play_area_mouse_exited"]
[connection signal="input_event" from="FolderMenu/Front/Settingslbl/SettingsArea" to="." method="_on_settings_area_input_event"]
[connection signal="mouse_entered" from="FolderMenu/Front/Settingslbl/SettingsArea" to="." method="_on_settings_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Front/Settingslbl/SettingsArea" to="." method="_on_settings_area_mouse_exited"]
[connection signal="input_event" from="FolderMenu/Front/Quitlbl/QuitArea" to="." method="_on_quit_area_input_event"]
[connection signal="mouse_entered" from="FolderMenu/Front/Quitlbl/QuitArea" to="." method="_on_quit_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Front/Quitlbl/QuitArea" to="." method="_on_quit_area_mouse_exited"]
[connection signal="mouse_entered" from="FolderMenu/Paper/Audio/AudioArea" to="." method="_on_audio_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Paper/Audio/AudioArea" to="." method="_on_audio_area_mouse_exited"]
[connection signal="mouse_entered" from="FolderMenu/Paper/Music/MusicArea" to="." method="_on_music_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Paper/Music/MusicArea" to="." method="_on_music_area_mouse_exited"]
[connection signal="mouse_entered" from="FolderMenu/Paper/Screen/ScreenArea" to="." method="_on_screen_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Paper/Screen/ScreenArea" to="." method="_on_screen_area_mouse_exited"]
[connection signal="mouse_entered" from="FolderMenu/Paper/Data/DataArea" to="." method="_on_data_area_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Paper/Data/DataArea" to="." method="_on_data_area_mouse_exited"]
[connection signal="input_event" from="FolderMenu/Paper/Main/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="FolderMenu/Paper/Main/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="FolderMenu/Paper/Main/Area3D" to="." method="_on_area_3d_mouse_exited"]
